<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="40dp">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:background="@color/material_blue_grey_800">

            <AutoCompleteTextView
                android:id="@+id/result_name_textview"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/result"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="10dp" />
        </LinearLayout>
        <ScrollView
            android:id="@+id/sv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <HorizontalScrollView
                    android:id="@+id/hori_scroll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="170dp"
                        android:orientation="horizontal">
                        <!--
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/hello_world"
                            android:id="@+id/tester_string" />
                            -->
                        <ImageView
                            android:id="@+id/bcard_image_front_result"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/bcard_front"
                            android:adjustViewBounds="true"/>
                        <!--
                        <ImageView
                            android:id="@+id/bcard_image_back_result"
                            android:layout_width="250dp"
                            android:layout_height="match_parent"
                            android:src="@drawable/bcard_back"/>
                            -->
                    </LinearLayout>
                </HorizontalScrollView>
                <ScrollView
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/reesut_l_layout"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="18dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp">


                        <TextView
                            android:id="@+id/item01_title"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/item01"
                            android:textSize="20sp"
                            android:textColor="#50A7B3"
                            android:layout_marginBottom="5dp"/>
                        <View
                            android:layout_height="1dp"
                            android:layout_width="match_parent"
                            android:background="#728C93"/>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:layout_weight="1">
                                <AutoCompleteTextView
                                    android:id="@+id/item01"
                                    android:layout_height="wrap_content"
                                    android:layout_width="match_parent"
                                    android:text="@string/item01"
                                    android:textSize="18sp"
                                    android:textColor="#696969"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginTop="10dp"
                                    android:background="@null"
                                    android:paddingBottom="10dp" />

                            </LinearLayout>




                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="end">

                            </LinearLayout>
                        </LinearLayout>
                        <TextView
                            android:id ="@+id/item02_title"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/item02"
                            android:textSize="20sp"
                            android:textColor="#50A7B3"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"/>
                        <View
                            android:layout_height="1dp"
                            android:layout_width="match_parent"
                            android:background="#728C93"/>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <LinearLayout
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="start"
                                android:layout_weight="1">
                                <AutoCompleteTextView
                                    android:layout_height="wrap_content"
                                    android:layout_width="match_parent"
                                    android:text="@string/item02"
                                    android:textSize="18sp"
                                    android:textColor="#696969"
                                    android:layout_marginBottom="5dp"
                                    android:layout_marginTop="10dp"
                                    android:background="@null"
                                    android:paddingBottom="10dp"
                                    android:id="@+id/item02" />
                            </LinearLayout>

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="end">

                            </LinearLayout>
                        </LinearLayout>


                        <TextView
                            android:id="@+id/item03_title"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/item03"
                            android:textSize="20sp"
                            android:textColor="#50A7B3"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"/>
                        <View
                            android:layout_height="1dp"
                            android:layout_width="match_parent"
                            android:background="#728C93"/>
                        <AutoCompleteTextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@string/item03"
                            android:textSize="18sp"
                            android:textColor="#6D6D6D"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            android:background="@null"
                            android:paddingBottom="10dp"
                            android:id="@+id/item03" />




                        <TextView
                            android:id="@+id/item04_title"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/item04"
                            android:textSize="20sp"
                            android:textColor="#50A7B3"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"/>
                        <View
                            android:layout_height="1dp"
                            android:layout_width="match_parent"
                            android:background="#728C93"/>
                        <AutoCompleteTextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@string/item04"
                            android:textSize="18sp"
                            android:textColor="#6D6D6D"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            android:background="@null"
                            android:paddingBottom="10dp"
                            android:id="@+id/item04" />

                        <TextView
                            android:id="@+id/item05_title"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/item05"
                            android:textSize="20sp"
                            android:textColor="#50A7B3"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"/>
                        <View
                            android:layout_height="1dp"
                            android:layout_width="match_parent"
                            android:background="#728C93"/>
                        <AutoCompleteTextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@string/item05"
                            android:textSize="18sp"
                            android:textColor="#6D6D6D"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            android:background="@null"
                            android:paddingBottom="10dp"
                            android:id="@+id/item05" />

                        <TextView
                            android:id="@+id/item06_title"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/item06"
                            android:textSize="20sp"
                            android:textColor="#50A7B3"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"/>
                        <View
                            android:layout_height="1dp"
                            android:layout_width="match_parent"
                            android:background="#728C93"/>
                        <AutoCompleteTextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@string/item06"
                            android:textSize="18sp"
                            android:textColor="#6D6D6D"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            android:background="@null"
                            android:paddingBottom="10dp"
                            android:id="@+id/item06" />


                        <TextView
                            android:id="@+id/item07_title"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/item07"
                            android:textSize="20sp"
                            android:textColor="#50A7B3"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"/>
                        <View
                            android:layout_height="1dp"
                            android:layout_width="match_parent"
                            android:background="#728C93"/>
                        <AutoCompleteTextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@string/item07"
                            android:textSize="18sp"
                            android:textColor="#6D6D6D"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            android:background="@null"
                            android:paddingBottom="10dp"
                            android:id="@+id/item07" />



                        <TextView
                            android:id="@+id/item08_title"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:text="@string/item08"
                            android:textSize="20sp"
                            android:textColor="#50A7B3"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"/>
                        <View
                            android:layout_height="1dp"
                            android:layout_width="match_parent"
                            android:background="#728C93"/>
                        <AutoCompleteTextView
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:text="@string/item08"
                            android:textSize="18sp"
                            android:textColor="#6D6D6D"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            android:background="@null"
                            android:paddingBottom="10dp"
                            android:id="@+id/item08" />




                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:background="@color/material_blue_grey_800">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp">



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:id="@+id/cancel_text_button"
                android:background="@null"
                android:textColor="@color/background_floating_material_light"
                android:layout_weight="1"
                android:onClick="editContact"/>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/save_text_button"
                android:background="@null"
                android:textColor="@color/background_floating_material_light"
                android:layout_weight="1"
                android:onClick="saveContact"/>

        </LinearLayout>
    </RelativeLayout>
</FrameLayout>